mcpforge: independent 1.12.2/MCP plugin